--- a/.envexample
+++ b/.envexample
@@ -1,4 +1,4 @@
-dashboardurl = https://opensource-demo.orangehrmlive.com/web/index.php/dashboard/index
-prodURL = https://www.orangehrm.com/
+DASHBOARD_URL = https://opensource-demo.orangehrmlive.com/web/index.php/dashboard/index
+PROD_URL = https://www.orangehrm.com/
 USER_NAME = check the page
 USER_PASSWORD = check the page for one
