--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -8,6 +8,11 @@ jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+    env:
+      USER_NAME: ${{ secrets.USER_NAME }}
+      USER_PASSWORD: ${{ secrets.USER_PASSWORD }}
+      dashboardurl: ${{ secrets.DASHBOARD_URL }}
+      prodURL: ${{ secrets.PROD_URL }}
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
