--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -11,8 +11,8 @@ jobs:
     env:
       USER_NAME: ${{ secrets.USER_NAME }}
       USER_PASSWORD: ${{ secrets.USER_PASSWORD }}
-      dashboardurl: ${{ secrets.DASHBOARD_URL }}
-      prodURL: ${{ secrets.PROD_URL }}
+      DASHBOARD_URL: ${{ secrets.DASHBOARD_URL }}
+      PROD_URL: ${{ secrets.PROD_URL }}
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
